fix javascript output alignment bug

--- a/IPython/html/static/notebook/less/outputarea.less
+++ b/IPython/html/static/notebook/less/outputarea.less
@@ -23,11 +23,10 @@ div.output_area {
     }
 }
 
-
 /* This is needed to protect the pre formating from global settings such
    as that of bootstrap */
-div.output_area pre {	
-    font-family: @monoFontFamily;	
+div.output_area pre {
+    font-family: @monoFontFamily;
     margin: 0;
     padding: 0;
     border: 0;
@@ -75,6 +74,9 @@ div.output_latex {
 }
 
 div.output_html {
+}
+
+div.output_javascript {
 }
 
 div.output_png {
